--- a/thank-you.html
+++ b/thank-you.html
@@ -1,52 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="no-js">
 <head>
-    <title>Thank You</title>
-    <link href="https://fonts.googleapis.com/css2?family=Changa:wght@400;700&display=swap" rel="stylesheet">
-
-    <style>
-        html, body {
-            font-family: 'Changa', sans-serif;
-            height: 100%;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 2em;
-        }
-
-        h2 {
-            margin: 0;
-            font-size: 1.5em;
-            color: #888;
-        }
-
-        .contact-btn {
-            font-family: 'Changa', sans-serif;
-            background-color: #333;
-            color: #fff;
-            padding: 10px 20px;
-            margin-top: 30px;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-        }
-
-        .contact-btn:hover {
-            background-color: #555;
-        }
-
-    </style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Primis Caffium - Software Services</title>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
+    <link rel="stylesheet" href="dist/css/style.css">
+    <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
-<body>
-<h1 style="font-size: 3rem">Thank you</h1>
-<h2>Your message has been sent</h2>
-<button class="contact-btn" onclick="location.href='https://primiscaffium.github.io'">Go Back</button>
+<body class="is-boxed has-animations">
+<div class="body-wrap">
+    <header class="site-header">
+        <div class="container">
+            <div class="site-header-inner">
+                <div class="brand header-brand">
+                    <h1 class="m-0">
+                        <a href="#">
+                            <img class="header-logo-image" src="dist/images/logo.svg" alt="Primis Caffium Logo">
+                        </a>
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </header>
 
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="hero-inner">
+                    <div class="hero-copy">
+                        <h1 class="hero-title mt-0">Thank you</h1>
+                        <p class="hero-paragraph">
+                            Your message has been sent.
+                        </p>
+                    </div>
+                    <div class="hero-figure anime-element">
+                        <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
+                            <rect width="528" height="396" style="fill:transparent;"/>
+                        </svg>
+                        <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
+                        <div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
+                        <div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div>
+                        <div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div>
+                        <div class="hero-figure-box hero-figure-box-05"></div>
+                        <div class="hero-figure-box hero-figure-box-06"></div>
+                        <div class="hero-figure-box hero-figure-box-07"></div>
+                        <div class="hero-figure-box hero-figure-box-08" data-rotation="-22deg"></div>
+                        <div class="hero-figure-box hero-figure-box-09" data-rotation="-52deg"></div>
+                        <div class="hero-figure-box hero-figure-box-10" data-rotation="-50deg"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="site-footer">
+        <div class="container">
+            <div class="site-footer-inner">
+                <div class="brand footer-brand">
+                    <a href="#">
+                        <img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                    </a>
+                    <div class="footer-copyright" style="margin-left: 10px">&copy; 2024 Primis Caffium, all rights reserved</div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+</div>
+
+<script src="dist/js/main.min.js"></script>
 </body>
 </html>
